@@ -46,9 +46,6 @@
 
 #if defined(HasUNZIP)
  #include "contrib/minizip/unzip.h"
- #if defined(_MSC_VER) && defined(HasZLIB) && defined(ProvideDllMain)
-  #pragma comment(lib, "CORE_RL_zlib_.lib")
- #endif
 #else
  #include <zip.h>
 #endif
